[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.22"
web3 = {version = "0.16.0", default-features = false, features = ["http-rustls-tls", "signing"]}
reqwest = {version = "0.11.4", features = ["json", "rustls-tls", "cookies"] }
tokio = { version = "1", features = ["full"] }
strum = "0.21.0"
strum_macros = "0.21"
serde_json = "1.0.64"
serde = "1.0.126"
hex-literal = "0.3.2"
secp256k1 = "0.20.3"
promptly = "0.3.0"
